[package]
name = "djin-protocol-derive"
version = "3.3.1"
authors = ["Dylan McKay <me@dylanmckay.io>", "Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2018"

description = "A for of protocol, for aoe-djin"
license = "MIT"
repository = "https://github.com/oknozor/protocol"
documentation = "https://docs.rs/djin-protocol"
keywords = ["protocol", "tcp", "udp", "connection", "encoding"]

[lib]
proc-macro = true

# N.B. protocol-derive should not depend on the protocol crate.
# This causes releasing to be a pain - which one first - neither is possible!
[dependencies]
syn = { version = "1.0.60", features = ["default", "extra-traits", "parsing"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"

