[package]
name = "djin-protocol"
version = "3.2.0"
authors = ["Dylan McKay <me@dylanmckay.io>", "Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2018"

description = "A for of protocol, for aoe-djin"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/oknozor/protocol"
documentation = "https://docs.rs/djin-protocol"
keywords = ["protocol", "tcp", "udp", "connection", "encoding"]

[features]
default = ["uuid"]

[dependencies]
byteorder = "1.4"
flate2 = { version = "1.0" }
uuid = { version = "0.8", optional = true }
error-chain = "0.12"
num-traits = "0.2"

[dev-dependencies]
# Used in examples
djin-protocol-derive = { path = "../protocol-derive", version = "3.1.9" }

[[example]]
name = "basic"
path = "../examples/basic.rs"

[[example]]
name = "compression"
path = "../examples/compression.rs"

[[example]]
name = "custom_middleware"
path = "../examples/custom_middleware.rs"

[[example]]
name = "packet_headers"
path = "../examples/packet_headers.rs"

[[example]]
name = "udp"
path = "../examples/udp.rs"

[[example]]
name = "get_enum_discriminant"
path = "../examples/get_enum_discriminant.rs"
