[package]
name = "protocol-tests"
version = "0.0.0" # do not change this, no point, it never gets published.
authors = ["Dylan McKay <me@dylanmckay.io>"]
edition = "2018"

publish = false

[dependencies]
djin-protocol = { path = "../protocol" }
djin-protocol-derive = { path = "../protocol-derive" }

